# litebench

./: .gitignore  README.md  sample-result.json
.github/workflows/: release.yml
agent/: Cargo.toml
agent/src/: bench_cpu.rs  bench_disk.rs  bench_mem.rs  benchmark.rs  browser.rs  dmi.rs  main.rs  score.rs  server.rs  state.rs  types.rs  util.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  styles.css  types.ts  useAgent.ts
web/src/components/: AgentConnect.tsx  CompareBar.tsx  ExportPdf.tsx  HardwareDetail.tsx  NamePrompt.tsx  RadarChart.tsx  ScoreCard.tsx  UploadResult.tsx
web/src/data/: baseline.ts
