[package]
name = "bench-agent"
version = "0.1.0"
edition = "2021"
description = "Lightweight benchmark agent: tests CPU/memory/disk and reads hardware info, outputs result.json"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
sha2 = "0.10"
tiny_http = "0.12"
include_dir = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
